# lca

./: .gitignore  ARCHITECTURE.md  INSTALL.md  README.md  install.sh  pyproject.toml
lca/: cli.py  config.py
lca/commands/: describe.py  edit.py  explain.py  find.py  fix.py  review.py
lca/context/: extractor.py  finder.py  limiter.py  reader.py  stack_parser.py
lca/llm/: client.py  prompts.py
lca/output/: diff.py  stream.py
lca/runtime/: hardware.py
tests/: test_cli.py  test_config.py  test_describe.py  test_diff.py  test_edit_command.py  test_extractor.py  test_find_command.py  test_finder.py  test_fix_command.py  test_fn_flag.py  test_hardware.py  test_limiter.py  test_prompts.py  test_reader.py  test_stack_parser.py
tests/fixtures/: sample.go  sample.js  sample.py
