[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-code-assistant"
version = "0.1.0"
description = "A local code assistant CLI tool"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
    "tree-sitter>=0.23.2",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-go>=0.23.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
]

[project.scripts]
lca = "lca.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["lca*"]
